tests/negative/typecheck/catch.orng
// catch.orng:7:12: error: expected a value of type `Int`, got a value of type `Bool`
//     x catch 4
//           ^
// 
fn main() -> Int {
    let x: ()!Bool = .ok(true)
    x catch 4
}